--- a/scss/partials/layout/_features.scss
+++ b/scss/partials/layout/_features.scss
@@ -204,6 +204,7 @@
     margin: 20px 0;
     font-size: $font-size-xs;
     color: $color-secondary;
+    opacity: 0;
 
     @include screen(mobile) {
       font-size: $font-size-s;
@@ -227,6 +228,7 @@
     }
 
     @include screen(big-desktop) {
+      opacity: 1;
       font-size: $font-size-s;
     }
 
@@ -235,7 +237,7 @@
     }
 
     &--slide-in-from-right {
-      animation: slideInFromRight 1s both;
+      animation: fadeIn 1s forwards;
 
       @include screen(big-desktop) {
         animation: none;
@@ -248,6 +250,7 @@
     color: darken($color-secondary, 10%);
     line-height: 1.1;
     word-wrap: break-word;
+    opacity: 0;
 
     @include screen(mobile) {
       line-height: 1.5;
@@ -273,6 +276,7 @@
 
     @include screen(big-desktop) {
       font-size: $font-size-xxs;
+      opacity: 1;
       line-height: 1.5;
     }
 
@@ -281,7 +285,7 @@
     }
 
     &--slide-in-from-right {
-      animation: slideInFromRight 1s 0.2s both;
+      animation: fadeIn 1s 0.2s forwards;
 
       @include screen(big-desktop) {
         animation: none;
