--- a/scss/partials/layout/_contact.scss
+++ b/scss/partials/layout/_contact.scss
@@ -22,7 +22,7 @@
     flex-direction: row;
     justify-content: space-around;
     margin: 0;
-    background-image: url(../img/contact-bg.webp);
+    background-image: url(../img/opinions-bg.jpg);
     background-position: center;
     background-size: cover;
   }
