--- a/scss/partials/layout/_opinions.scss
+++ b/scss/partials/layout/_opinions.scss
@@ -1,18 +1,13 @@
 .opinions {
-  width: 100%;
-  height: 85vh;
   position: relative;
+  height: 90vh;
   display: flex;
   align-items: center;
-  background-image: url();
+  background-image: url(../img/opinions-bg.jpg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
   overflow: hidden;
-
-  &.visible {
-    background-image: url(../img/opinions-bg.jpg);
-  }
 
   &__wrapper {
     width: 100%;
@@ -32,10 +27,6 @@
       top: 50%;
       background-color: $color-white;
       transform: translateY(-50%);
-      -webkit-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      -o-transform: translateY(-50%);
     }
   }
 
@@ -172,7 +163,6 @@
   }
 
   &__author {
-    display: flex;
     flex-direction: column;
     margin-bottom: 8%;
     font-size: $font-size-xxs;
@@ -223,6 +213,7 @@
     position: absolute;
     bottom: 4%;
     left: 50%;
+    padding: 0 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -271,10 +262,10 @@
     }
 
     @include screen(big-desktop) {
-      width: 8%;
+      width: 4%;
       height: 8%;
       bottom: 6%;
-      font-size: $font-size-s;
+      font-size: $font-size-xxs;
     }
   }
 }
