--- a/scss/partials/layout/_footer.scss
+++ b/scss/partials/layout/_footer.scss
@@ -1,19 +1,15 @@
 .footer {
-  height: 55vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: $color-white;
   font-size: $font-size-xs;
-  color: #000;
+  color: $color-black;
   font-weight: $bold;
 
-  @include screen(mobile) {
-    @include orientation(landscape) {
-      height: 80vh;
-      font-size: $font-size-xs;
-    }
+  @include orientation(landscape) {
+    font-size: $font-size-xs;
   }
 
   @include screen(tablet) {
@@ -25,18 +21,11 @@
   }
 
   @include screen(desktop) {
-    height: 15vh;
     flex-direction: row-reverse;
     font-size: $font-size-m;
 
     @include orientation(landscape) {
       font-size: $font-size-s;
-    }
-  }
-
-  @include rwd(1365) {
-    @include orientation(landscape) {
-      font-size: $font-size-m;
     }
   }
 
@@ -51,6 +40,7 @@
   &__link-mobile {
     display: flex;
     align-items: center;
+    margin: 20px 0;
   }
 
   &__icon {
@@ -76,6 +66,7 @@
     background-image: url(../img/logo.png);
     background-size: cover;
     background-position: center;
+    margin: 20px 0;
 
     @include screen(tablet) {
       height: 190px;
@@ -95,6 +86,7 @@
   &__signature {
     text-transform: uppercase;
     font-weight: $normal;
+    margin: 20px 0;
 
     @include screen(mobile) {
       @include orientation(landscape) {
